4.8.29 dev v6 (#115)
* Added custom field for accessSettings (#112)

* KB-11770: Fixed contentType filter issue when passing an array of keys (#113)

* KB-11770: Fixed isApar filter issue when passing an array of keys (#114)

* KB-11770: Fixed contentType filter issue when passing an array of keys

* KB-11770: Fixed isApar filter issue when passing an array of keys

---------

Co-authored-by: Ruksana Semeir <111083125+ruksana2808@users.noreply.github.com>
Co-authored-by: Arpitha <arpitha.sureshappa@tarento.com>